--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
       "cordova-plugin-globalization": {},
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-network-information": {},
-      "cordova-plugin-vibration": {}
+      "cordova-plugin-vibration": {},
+      "InAppBrowser": {}
     }
   },
   "dependencies": {
